tests/ui/generic-associated-types/gat-in-trait-path.base.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/gat-in-trait-path.rs:26:17
   |
LL | fn f(_arg : Box<dyn for<'a> Foo<A<'a> = &'a ()>>) {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/gat-in-trait-path.rs:10:10
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     type A<'a> where Self: 'a;
   |          ^ ...because it contains the generic associated type `A`
   = help: consider moving `A` to another trait
   = help: the following types implement the trait, consider defining an enum where each variant holds one of these types, implementing `Foo` for this new enum and using it instead:
             Fooer<T>
             Fooy

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
